modificacion de la pagina web

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="#somos-proya">Acerda de mi</a>
                 <a href="#somos-proya2">Acerca de Patata</a>
                 <a href="#nuestros-programas">Proyectos</a>
-                <a href="#caracteristicas">Contacto</a>
+                <a href="#caracteristicas">Cursos</a>
             </nav>
         </div>
     </header>
@@ -28,9 +28,9 @@
             <div class="texto">
 
                 <h2> Darwin<span class="color-acento">Renato</span></h2>
-                <p>Me asomé un 20 de diciembre del 1994, me gusta la tecnología, tengo mucha curiosidad por como funcionan las cosas,
-                    en mis ratos libre me gusta cantar y tocar la guitarra, sueño con ser un ingeniero con grandes capacidades 
-                    para facilitar la vida de las personas y algún día ser un interprete de música. 
+                <p>Me asomé un 20 de diciembre, con los ojos abiertos como si tuviera ganas de vivir; en verdad sí tengo ganas de vivir en especial cuanto soy consciente de mi propia existencia en profundos estados de concentración (flow zone).
+                </p>     
+                <p>Y este soy yo cuando a veces intento ser yo, un robot con ganas de destruir las entrañas de mi ser, con la condición de existir por un momento, solo ahora se tiene el poder de decidir si eres o no eres, con la casualidad de lograr los mejores deseos de este mundo cruel.   
                 </p>
             </div>
         </div>
@@ -54,21 +54,24 @@
             <h2>Mis Proyectos</h2>
             <div class="programas">
                 <div class="carta">
+                    
                     <h3>Latex</h3>
+                    <h3 style="visibility: hidden;">________________</h3>
+                    <p style="visibility: hidden;">------</p>
                     <p>Utilizo Latex para poder elaborar diferentes documentos que requieran calidad tipográfica. </p>
-                    <button>+ Info</button>
+                    <button>+ más</button>
                 </div>
                 <div class="carta">
-                    <h3>Data Center</h3>
-                    <p>Contar con soluciones de Data Center confiables, robustas y seguras es muy importante para la continuidad de todo negocio.
-                        Evite pérdidas de información e indisponibilidad de sistemas prioritarios que pueden afectar negativamente la continuidad de su negocio.</p>
-                    <button>+ Info</button>
+                    <h3>Python For Data Science</h3>
+                    <h3 style="visibility: hidden;">________________</h3>
+                    <p>Primero los datos, Python es una herramienta muy útil para el manejo de datos, desde pequeñas muestras hasta inmensas cantidades de información.   </p>
+                    <button>+ más</button>
                 </div>
                 <div class="carta">
-                    <h3>Telefonía corporativa</h3>
-                    <p>Ahorro, alta disponibilidad, calidad y seguridad en una red dedicada
-                        Las empresas modernas necesitan canales de comunicación eficientes y seguros donde contactar con clientes, proveedores y colaboradores para estar a la altura de los desafíos actuales</p>
-                    <button>+ Info</button>
+                    <h3>Telecommunication and Technology Solutions</h3>
+                    <h3 style="visibility: hidden;">________________</h3>
+                    <p>Implementación de diferentes proyecto en el área de telecomunicaciones, redes, video vigilancia, IoT. </p>
+                    <button>+ más</button>
                 </div>  
             </div>
         </div>
@@ -77,22 +80,27 @@
     <section id="caracteristicas">
         <div class="container">
             <ul>
-                <li>✔️ 100% online</li>
-                <li>✔️ Flexibilidad de horarios</li>
-                <li>✔️ Soporte 1:1</li>
-                <li>✔️ Asistencia financiera</li>
+                <li>✔️ Introducción a la razón y a la dialéctica del vacio.</li>
+                <li>✔️ Cálculo abstruso de tus acciones fulminantes.</li>
+                <li>✔️ Esquema de psicodrama diferencial.</li>
+                <li>✔️ Señales de tus recuerdos en tiempo discreto.</li>
+                <li>✔️ Circuitos electrorgásmicos, filtos arrogantes y aplificadores de poder.</li>
+                <li>✔️ Sistemas analógicos y sus consecuencias nostálgicas.</li>
+                <li>✔️ Introducción a la teclametafísica.</li>
+                <li>✔️ Diseño e implementación de un sistema de control de los impulsos y entrenamiento en análisis situacional.</li>
+            
             </ul>
         </div>
     </section>
 
     <section id="final">
-        <h2>Listo para programar?</h2>
-        <button>APLICÁ YA!</button>
+        <h2> ¿Listo para aprender?</h2>
+        <button> contáctame </button>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; ProgramaYa 2021</p>
+            <p>&copy; teclametafísico 2022</p>
         </div>
     </footer>
 </body>
