--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">Teclametafísico</p>
+            <p class="logo">Teclametafísico2</p>
             <nav>
                 <a href="#somos-proya">Acerda de mi</a>
                 <a href="#somos-proya2">Acerca de Patata</a>
