--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <section id="somos-proya">
         <div class="container">
             <p class="logo">Teclametafísico8</p>
             <nav>
@@ -16,6 +17,7 @@
                 <a href="#caracteristicas">Cursos</a>
             </nav>
         </div>
+         </section>
     </header>
 
     <section id="hero">
