--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en_US">
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,7 +12,7 @@
   <meta property="og:image" content="src/portfolio_img.png">
   <meta property="og:description" content="Hi I'm a Web Developer from Lima, Peru 🇵🇪 
   and enthusiast for technology, code, music and art.">
-  <title>MistyBlunch</title>
+  <title>DarwinR</title>
   <link rel="icon" href="https://i.imgur.com/QeULyjc.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans|Schoolbell&display=swap" rel="stylesheet">
@@ -105,26 +104,6 @@
       </div>
     </div>
   </section>
-
-    <title>Teclametafísico</title>
-
- <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <header>
-        <section id="somos-proya">
-        <div class="container">
-            <p class="logo">Teclametafísico8</p>
-            <nav>
-                <a href="#somos-proya">Acerda de mi</a>
-                <a href="#somos-proya2">Acerca de Patata</a>
-                <a href="#nuestros-programas">Proyectos</a>
-                <a href="#caracteristicas">Cursos</a>
-            </nav>
-        </div>
-         </section>
-    </header>
-
 
   <!-- About -->
   <section class="hero about" id="about">
