--- a/index.html
+++ b/index.html
@@ -117,23 +117,22 @@
           <h3 class="subtitle is-3 en-opt">Hi! 👋</h3>
           <h3 class="subtitle is-3 es-opt">Hola! 👋</h3>
           <h5 class="subtitle is-5 en-opt">
-            I'm a Web Developer <br>
-            and enthusiast for technology, code, music and art. <br>
+            I'm Darwin Renato <br>
+            I like technology, programming and music.<br>
           </h5>
           <h5 class="subtitle is-5 es-opt">
-            Soy desarrolladora web<br>
-            y entuasiasta por la tecnología, el código, la música
-            y el arte. <br>
+            Soy Darwin Renato<br>
+            Me gusta muscho la tecnología, programación y musica. <br>
           </h5>
-          <h6 class="subtitle is-6 en-opt">I write articles when I'm free about programming or tutorials, 
-            you can find them in 
-            <a href="https://medium.com/@gracenikole" target="_blank"rel="noopener noreferrer">Medium</a> 
-            and in <a href="https://dev.to/mistyblunch" target="_blank" rel="noopener noreferrer">dev.to</a>. 
+          <h6 class="subtitle is-6 en-opt">
+            I studied electronic engineering, I am learning to program in several languages ​​and from time to time I compose songs playing the guitar.
+            <!--<a href="https://medium.com/@gracenikole" target="_blank"rel="noopener noreferrer">Medium</a> -->
+           <!-- and in <a href="https://dev.to/mistyblunch" target="_blank" rel="noopener noreferrer">dev.to</a>. -->
           </h6>
-          <h6 class="subtitle is-6 es-opt">Escribo artículos cada que tengo tiempo acerca de programación 
-            o tutoriales, puedes encontrarlos en
-            <a href="https://medium.com/@gracenikole" target="_blank"rel="noopener noreferrer">Medium</a> 
-            y también en <a href="https://dev.to/mistyblunch" target="_blank" rel="noopener noreferrer">dev.to</a>. 
+          <h6 class="subtitle is-6 es-opt">
+            Estudié ingeniería en electrónica, estoy aprendiendo a programar en varios lenguajes y de vez en cuando compongo canciones tocando la guitarra.
+            <!--<a href="https://medium.com/@gracenikole" target="_blank"rel="noopener noreferrer">Medium</a> 
+            y también en <a href="https://dev.to/mistyblunch" target="_blank" rel="noopener noreferrer">dev.to</a>. -->
           </h6>
           <br>
           <img src="https://i.imgur.com/rnmYC1Z.jpg" class="about-img" alt="my photo">
@@ -141,24 +140,17 @@
           <h6 class="subtitle is-6 has-text-centered es-opt">Me gusta esta foto :3</h6>
           <br>
           <h6 class="subtitle is-6 en-opt">
-            I'm searching to improve my knowledge in frontend technologies like JS, CSS and some libraries and frameworks, 
-            and learn more about backend technologies too.
+            I am very interested in data science and artificial intelligence, for that reason I am learning technologies such as pandas in Python, exploring some work environments in data science, version management with Git and Github, as well as learning to make web pages.
           </h6>
           <h6 class="subtitle is-6 es-opt">
-            Actualmente estoy mejorando mis conocimientos en tecnologías frotend como JS, CSS y otra librerías y frameworks,
-            y aprendiendo algunas cosas sobre backend.
-          </h6>
-          <h6 class="subtitle is-6 en-opt">
-            For now I'm a student although I'm learning more things in books, YouTube videos and blogs too. 
-            I really like reading programming posts I've always loved learning something new 💚
+            Me interesa mucho la ciencia de datos y la inteligencia artificial por esa razón estoy aprendiendo tecnologías como pandas en Python, explorando algunos entornos de trabajo en ciencia de datos, manejo de versiones con Git y Github además por añadidura aprendiendo a realizar páginas webs.
+            <h6 class="subtitle is-6 en-opt">
+              Another of my pending projects is to carry out IOT applications, using my knowledge in electronics, in signal processing and linking that information in actuators or images to be able to visualize. That is the relationship with data science. 💚
           </h6>
           <h6 class="subtitle is-6 es-opt">
-            Por ahora soy estudiante, sin embargo, estoy aprendiendo más leyendo algunos libros, 
-            viendo videos en YouTube o leyendo blogs.
-            Realmente me encanta leer post de programación, siempre me ha gustado aprender algo nuevo 💚
+            Otro de mis proyectos pendiente es realizar aplicaciones IOT, utilizando mis conocimientos en electrónica, en el procesamiento de señales y vincular esa información en actuadores o imágenes para poder visualizar. He ahí la relación con la ciencia de datos. 💚
           </h6>
-          
-          <h6 class="subtitle is-6 en-opt">
+          <!--<h6 class="subtitle is-6 en-opt">
             When I'm free I go to music fairs to listen to bands play live too. I have a
             <a href="https://www.youtube.com/channel/UCoKBkoGknv8JQOsjcRgs-tw?view_as=subscriber" target="_blank" rel="noopener noreferrer">YouTube</a> 
             channel where I upload videos of my favorite bands.
@@ -168,7 +160,7 @@
             de hecho, tengo un canal de 
             <a href="https://www.youtube.com/channel/UCoKBkoGknv8JQOsjcRgs-tw?view_as=subscriber" target="_blank" rel="noopener noreferrer">YouTube</a>
             en donde subo videos de mis bandas favoritas entre otras cosas.
-          </h6>
+          </h6>-->
           <h6 class="subtitle is-6 read-more" id="about-read-more" onclick="openReadMore(this.id)">
             Read More...
           </h6>
@@ -190,62 +182,17 @@
               Aquí te dejo algunas cosas sobre mí y curiosidades. 🐭  
             </h6>
             <h6 class="subtitle is-6 en-opt">
-              When I started in the world of programming, one of the first things I did was a small 
-              screen that opened from my computer that asked me for the password that I put in my 
-              pseudocode to open a calculator and for me it was a lot of fun. I felt like a troll 
-              asking for the password to use a simple calculator 👩🏼‍💻, after that and other things that
-              I did I started to like the tech area because you will always need learning something new, 
-              although sometimes it can be overwhelming, but at the same time fun.
+              My greatest inspiration in music is an old singer, a fan of Pink Floy, one of his albums that he recommends is Atomic Heart Mother, obviously I understood that it is a much better album than The Dark Side of the Moon, for me from the cover it is much better and especially the song Summer '68 a trip that I was a part of.
             </h6>
             <h6 class="subtitle is-6 es-opt">
-              Cuando comencé en el mundo de la programacion, una de las primeras cosas que hice fue una pequeña
-              pantalla que se abría desde mi computadora y me preguntaba por una contraseña, la cual había 
-              puesto en mi pseudocódigo para así poder abrir una calculadora, para mí fue muy divertido porque 
-              me sentía toda troll pidiendo una contraseña para usar una simple calculadora 👩🏼‍💻, después de
-              eso y otras cosas que hice me comenzó a gustar el área de tecnología, porque siempre necesitarás 
-              aprender algo nuevo, aunque a veces puede ser abrumador, pero al mismo tiempo divertido.
+              Mi máxima inspiración en la música es un viejito cantante, fan de Pink Floy, uno de sus discos que recomienda es Atomic Heart Mother obviamente entendí que es mucho mejor disco que  The Dark Side of the Moon, para mi desde la portada es mucho mejor y sobre todo la canción Summer '68 un viaje del que fui participe. 
             </h6>
             <img src="https://i.imgur.com/LwXJ9yJ.jpg" class="about-img2" alt="Patata">
             <h6 class="subtitle is-6 en-opt">
-              After seeing pseudocode I used and worked with languages like C ++, PHP,
-              Python and JS, but more with JS and Python.
+              She is Yana Patata, she is cute but she looks at you with a judging look hahaha, also among her hobbies is barking at the conchuda moon, don't let her albinism confuse you because she has a black soul.
             </h6>
             <h6 class="subtitle is-6 es-opt">
-              Después de ver pseudocódigo comencé a usar y trabajar con lenguajes como C++, PHP, 
-              Python y JS, pero más con JS y Python.
-            </h6>
-            <h6 class="subtitle is-6 en-opt">
-              I think the best way to practice and learn more is sharing your knowledge with others and 
-              it's very nice to do it 💛, because when I didn't know how to start in the world of programming, 
-              opinions and advices from others were very useful for me. So, when I see people who don't 
-              know how to start programming, I give them some recommendation or a link to a page so they can 
-              learn and experiment without fear depending on what they like. 
-            </h6>
-            <h6 class="subtitle is-6 es-opt">
-              Yo pienso que la mejor manera de practicar y aprender más es compartir tus conocimientos
-              con otras personas y es muy bonito hacerlo 💛, porque cuando yo no sabía cómo comenzar en
-              programación las opiniones y consejos de otros me fue de mucha ayuda. 
-              Por eso, cuando veo a personas que no saben cómo comenzar les doy alguna recomendación o 
-              links a páginas en donde ellos pueden aprender y experimentar sin miedo alguno dependiendo 
-              de lo que les guste.
-            </h6>
-            <h6 class="subtitle is-6 en-opt">
-              Sometimes I volunteer for workshops of organizations like <b>WAWA Laptop</b>, 
-              <b>HackSpace</b>, <b>GIT (Girls Inspire Tech)</b> in Peru. I love being able to help.
-            </h6>
-            <h6 class="subtitle is-6 es-opt">
-              A veces soy voluntaria en talleres de organizaciones como <b>WAWA Laptop</b>, 
-              <b>HackSpace</b>, <b>GIT (Girls Inspire Tech)</b> en Peru. Me encanta poder ayudar como pueda.
-            </h6>
-            <h6 class="subtitle is-6 en-opt">
-              One of my favorite hobbies is singing, so I like karaokes a lot 🎤, I also like acting, 
-              watching horror and actions movies, going to art expositions and discovering new music.
-            </h6>
-            <h6 class="subtitle is-6 es-opt">
-              Uno de mis hobbies favoritos es cantar, así que me gustan mucho los karaokes 🎤, 
-              También me gusta actuar, ver películas de terror y acción, ir a exposiciones de 
-              arte y descubrir nueva música.
-            </h6>
+              Ella es Yana Patata, es una ternura pero te mira con una mirada que juzga jajaj, además entre sus hobbies está ladrar a la luna conchuda, que su albinismo no te confunda porque tiene el alma negra.</h6>
           </div>
         </div>
       </div>
