modificacion del footer

--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@
             ¿Quieres ponerte en Contacto?
           </h2>
           <h4 class="subtitle is-4 has-text-white has-text-centered is-spaced en-opt">
-            Find me on Twitter, Instagram, Medium, Dev.to, GitHub or YouTube
+            Find me on Twitter, Instagram, GitHub or YouTube
           </h4>
           <h4 class="subtitle is-4 has-text-white has-text-centered is-spaced es-opt">
-            Encuentrame en Twitter, Instagram, Medium, Dev.to, GitHub o en YouTube
+            Encuentrame en Twitter, Instagram, GitHub o en YouTube
           </h4>
         </div>
         <div class="social-media">
